--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<select name="select" id="select">
-			<option value="-1">请选择</option>
+			<option value="?>X,?&lt;Y(大于最大值小于最小值)">?>X,?&lt;Y(大于最大值小于最小值)</option>
 			<option value="1">男</option>
 			<option value="0" selected="true">女</option>
 			<option value="10" disabled="true">"'人妖</option>
